--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc-ed966dac-20241007",
-    "react-dom": "19.0.0-rc-ed966dac-20241007"
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1"
   },
   "overrides": {
     "@types/react": "npm:types-react@rc",
@@ -21,6 +21,6 @@
   },
   "devDependencies": {
     "@ladle/react": "^4.1.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
