--- a/package.json
+++ b/package.json
@@ -10,17 +10,13 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@ladle/react": "^4.1.2",
-    "typescript": "^5.6.3"
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "typescript": "^5.7.2"
   }
 }
