--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "isolatedModules": true,
     "jsx": "react-jsx",
-    "target": "esnext"
+    "lib": ["es2023", "dom", "dom.iterable"],
+    "moduleDetection": "force",
+    "moduleResolution": "bundler",
+    "noImplicitOverride": true,
+    "noUncheckedIndexedAccess": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es2023",
+    "verbatimModuleSyntax": true
   }
 }
