--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@ladle/react": "^5.0.1",
+    "@ladle/react": "^5.1.0",
+    "@types/node": "^24.7.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "tsdown": "^0.15.6",
     "typescript": "^5.7.3"
   }
 }
