--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "declaration": true,
+    "isolatedDeclarations": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "lib": ["es2023", "dom", "dom.iterable"],
+    "module": "preserve",
     "moduleDetection": "force",
     "moduleResolution": "bundler",
     "noImplicitOverride": true,
