--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "cantal",
-  "version": "0.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "type": "module",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsdown",
     "stories": "npx ladle serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
